--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -79,7 +79,9 @@ jobs:
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
+        rm -rf openwrt/.config
         [ -e $CONFIG_FILE ] && mv ${{matrix.target}}$CONFIG_FILE openwrt/.config
+        echo ${{matrix.target}}$CONFIG_FILE
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
