--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -90,6 +90,7 @@ jobs:
       run: |
         cd openwrt
         #make defconfig
+        mv ../${{matrix.target}}$CONFIG_FILE openwrt/.config
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
