--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -121,6 +121,7 @@ jobs:
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
+        tree openwrt
         cd openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
@@ -142,17 +143,17 @@ jobs:
         [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
-    - name: Upload images to release
-      id: upload-release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: HassOS/output/images/haos_*
-        asset_name: ${{ matrix.asset_name }}
-        tag: ${{ env.CURRENT_DATE }}编译
-        overwrite: true
-        file_glob: true
-        body: "欢迎关注Youtube频道https://youtube.com/@itcommander   博客地址https://sumju.net   官方硬件优惠卷领取https://sumju.net/?p=7943"
+    # - name: Upload images to release
+    #   id: upload-release
+    #   uses: svenstaro/upload-release-action@v2
+    #   with:
+    #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #     file: HassOS/output/images/haos_*
+    #     asset_name: ${{ matrix.asset_name }}
+    #     tag: ${{ env.CURRENT_DATE }}编译
+    #     overwrite: true
+    #     file_glob: true
+    #     body: "欢迎关注Youtube频道https://youtube.com/@itcommander   博客地址https://sumju.net   官方硬件优惠卷领取https://sumju.net/?p=7943"
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
