--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [x64,r2s,r4s]
+        target: [x64,r2s,r4s,rpi3]
         
     steps:
     - name: Checkout
